# katas

./: .gitignore
Diamond/Java/src/tv/webenabled/main/: DiamondBuilder.java  Program.java
Diamond/Java/src/tv/webenabled/test/: DiamondBuilderTest.java
cpp/Diamond/: CMakeLists.txt  main.cpp
cpp/Diamond/diamond_lib/: CMakeLists.txt  DiamondWorker.cpp  DiamondWorker.h
cpp/Diamond/google-test/: CMakeLists.txt  DiamondTest.cpp
dotnet/diamond/: Diamond.sln
dotnet/diamond/Diamond/: DiamondBuilder.cs  Either.cs  IEither.cs  Program.cs
dotnet/diamond/Diamond.Test/: Diamond.Test.csproj  DiamondTest.cs
java/diamond/: build.gradle.kts  settings.gradle.kts
java/diamond/lib/: build.gradle.kts
java/diamond/lib/src/main/java/diamond/: Library.java
java/diamond/lib/src/test/java/diamond/: LibraryTest.java
java/diamond/src/main/java/tv/webenabled/: DiamondBuilder.java  Program.java
java/diamond/src/test/java/tv/webenabled/: DiamondBuilderTest.java
javascript/diamond/: package-lock.json  package.json
javascript/diamond/spec/: diamondSpec.js
javascript/diamond/src/: diamondCalculator.js  index.js
